# oatpp-petstore-2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
api/: petstore.yaml
src/: App.cpp  AppComponent.hpp  AuthInterceptor.hpp  AuthorizationHandler.cpp  AuthorizationHandler.hpp
src/auth/: ApiKeyAuth.hpp  OAuth2.hpp  OAuth2Auth.hpp
src/controller/: MyController.hpp  PetController.hpp  StoreController.hpp  UserController.hpp
src/dto/: ApiResponseDTO.hpp  CategoryDTO.hpp  DTOs.hpp  OrderDTO.hpp  PetDTO.hpp  TagDTO.hpp  UserArrayDTO.hpp  UserDTO.hpp
src/service/: MyPetService.hpp  MyStoreService.hpp  MyUserService.hpp  PetService.hpp  StoreService.hpp  UserService.hpp
test/: tests.cpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
test/controller/: MyControllerTest.cpp  MyControllerTest.hpp  PetControllerTest.cpp  PetControllerTest.hpp  StoreControllerTest.cpp  StoreControllerTest.hpp  UserControllerTest.cpp  UserControllerTest.hpp
test/dto/: ApiResponseDTOTest.cpp  ApiResponseDTOTest.hpp  CategoryDTOTest.cpp  CategoryDTOTest.hpp  OrderDTOTest.cpp  OrderDTOTest.hpp  PetDTOTest.cpp  PetDTOTest.hpp  TagDTOTest.cpp  TagDTOTest.hpp  UserDTOTest.cpp  UserDTOTest.hpp
utility/: pet_test.sh  store_test.sh  test.sh  user_test.sh
